[package]
name = "async-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
# tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.11", features = ["json"] }

surf = "2.1.0"
async-std = { version = "1.7.0", features = ["attributes"] }