[package]
name = "deno_core_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.134"
tokio = { version = "1", features = ["full"] } 
zstd = "0.11"
lazy_static = "1 " 
serde = { version = "1", features = ["derive"] }
reqwest = "0.11"

[build-dependencies]
deno_core = "0.134"
zstd = "0.11"