[package]
name = "v8_live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v8 = "0.41"
serde_v8 = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking"] }
lazy_static = "1"
once_cell = "1"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["rt"]}
