[package]
name = "proc-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
askama = "0.11"
heck = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
litrs = "0.2"